# getdomus_team_task_manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: block-direct-push.yml  ci.yml  docs.yml
alembic/: env.py
alembic/versions/: 652c5c63f156_add_last_seen_at_to_developers.py  aaa8f8a8e991_initial_tables.py
backend/: Dockerfile  main.py  seed.py
backend/api/v1/: auth.py  (+4 more)
backend/core/: config.py  database.py  dependencies.py  security.py  timezone_utils.py
backend/models/: __init__.py  base.py  developer.py  task.py  task_assignment.py  user.py
backend/repositories/: developer_repository.py  task_repository.py  user_repository.py
backend/schemas/: auth.py  dashboard.py  developer.py  task.py
backend/services/: auth_service.py  dashboard_service.py  developer_service.py  presence_service.py  task_service.py
backend/tests/: conftest.py
docs/: index.md  spec.md
docs/technical/: architecture.md  assumptions.md  contributing.md  decisions.md  deployment.md  index.md  setup.md  testing.md
docs/user-guide/: admin.md  dashboard.md  developer.md  index.md  manager.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: generate_api_docs.py
search/: search_index.json
site/: 404.html  index.html
site/spec/: index.html
site/technical/: index.html
site/user-guide/: index.html
technical/deployment/: index.html
technical/testing/: index.html
user-guide/admin/: index.html
(+51 files in other folders)
